--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'junit:junit:4.12'
+    testImplementation ("io.github.bonigarcia:webdrivermanager:3.6.2")
+    testImplementation 'com.codeborne:selenide:5.2.8'
+    testImplementation 'org.testng:testng:6.14.3'
+
+
 }
